--- a/src/pages/history-matchs/history-matchs.html
+++ b/src/pages/history-matchs/history-matchs.html
@@ -17,7 +17,7 @@
             <div  >
               <h4>{{match.day}} de {{match.month}} del {{match.year}} </h4>
               <ion-note>
-                {{match.hour}}  <h5 class="h5can"> Cancha {{match.field}}</h5>
+                {{match.hour}}  <h5 class="h5can"> Cancha {{match.field.fieldName}}</h5>
               </ion-note>
             </div>
           </ion-col>
