--- a/src/pages/calendar-match/calendar-match.html
+++ b/src/pages/calendar-match/calendar-match.html
@@ -5,7 +5,7 @@
         <ion-icon name="arrow-back"></ion-icon>
       </button>
     </ion-buttons> -->
-    <ion-title>Cancha N°{{cancha}}</ion-title>
+    <ion-title>Cancha {{field?.fieldName}}</ion-title>
   </ion-navbar>
 </ion-header>
 
