--- a/src/pages/set-location/set-location.html
+++ b/src/pages/set-location/set-location.html
@@ -1,10 +1,9 @@
 
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar  color="primary">
     <ion-title>Seleccione Ubicacion</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
