--- a/src/pages/detail-field/detail-field.html
+++ b/src/pages/detail-field/detail-field.html
@@ -6,7 +6,13 @@
 <ion-content  padding>
   <ion-card>
 
-    <img *ngIf="!bandSee" src="assets/imgs/cancha1.jpg">
+     <!-- <img *ngIf="!bandSee" src="assets/imgs/cancha1.jpg">  slidesPerView="2" imageViewer-->
+    <ion-slides  *ngIf="!bandSee" class="image-slider" loop="true" >
+        <ion-slide *ngFor="let img of images">
+          <img src="{{img}}" class="thumb-img" imageViewer/>
+        </ion-slide>
+      </ion-slides>
+
     <agm-map *ngIf="bandSee && bandField" [latitude]="field.location.lat" [longitude]="field.location.lng" [zoom]="12">
       <agm-marker [latitude]="field.location.lat" [longitude]="field.location.lng" [label]="field.fieldName"></agm-marker>
     </agm-map>
@@ -18,11 +24,11 @@
 
     <ion-item>
       <ion-icon name="football" item-start large></ion-icon>
-      <h2>{{field.addres}}</h2>
-      <p>{{field.city}}</p>
-      <p>{{field.town}}</p>
+      <h2>Dirección: {{field.addres}}</h2>
+      <p>Ciudad: {{field.city}}</p>
+      <p>Provincia: {{field.town}}</p>
       
-      <ion-note>{{field.phone}}</ion-note>
+      <ion-note>Teléfono: {{field.phone}}</ion-note>
     </ion-item>
 
     <ion-item>
