--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,6 +4,11 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Inicio</ion-title>
+    <ion-buttons end>
+      <button ion-button clear class="notifications"  icon-only (click)="onNotifications($event)">
+        <ion-icon name="notifications"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
