extension maps listo v 0.6.2

--- a/src/pages/calendar-match/calendar-match.html
+++ b/src/pages/calendar-match/calendar-match.html
@@ -6,6 +6,9 @@
       </button>
     </ion-buttons> -->
     <ion-title>Cancha {{field?.fieldName}}</ion-title>
+    <ion-buttons end>
+      <page-notificationOn ></page-notificationOn>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
