--- a/src/pages/history-matchs/history-matchs.html
+++ b/src/pages/history-matchs/history-matchs.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-navbar>
     <ion-title> Reservas</ion-title>
+    <ion-buttons end>
+      <page-notificationOn ></page-notificationOn>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
