--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -11,11 +11,9 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Perfil/Usuario</ion-title>
-    <!-- <ion-buttons end>
-      <button ion-button clear class="search" color="dark" icon-only (click)="onSearch()">
-        <ion-icon name="search"></ion-icon>
-      </button>
-    </ion-buttons> -->
+     <ion-buttons end>
+      <page-notificationOn ></page-notificationOn>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
