--- a/src/pages/teams/teams.html
+++ b/src/pages/teams/teams.html
@@ -10,11 +10,12 @@
               ion-button 
               clear
               class="search" 
-              color="dark" 
+              color="light" 
               icon-only 
               (click)="onSearch()">
           <ion-icon name="search"></ion-icon>
         </button>
+        <page-notificationOn ></page-notificationOn>
       </ion-buttons>
     </ion-navbar>
   
