--- a/src/pages/detail-field/detail-field.html
+++ b/src/pages/detail-field/detail-field.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-navbar color="primary">
     <ion-title text-center>{{field.fieldName}}</ion-title>
+    <ion-buttons end>
+      <page-notificationOn ></page-notificationOn>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 <ion-content  padding>
