--- a/src/pages/fields/fields.html
+++ b/src/pages/fields/fields.html
@@ -9,11 +9,11 @@
       <button ion-button clear class="search" color="light" icon-only (click)="onSearch()">
         <ion-icon name="search"></ion-icon>
       </button>
-      <page-notificationOn ></page-notificationOn>
+      <page-notificationOn></page-notificationOn>
       <button ion-button clear class="more" color="light" icon-only (click)="onShowOptions($event)">
         <ion-icon name="more"></ion-icon>
       </button>
-      
+
     </ion-buttons>
   </ion-navbar>
 
@@ -26,7 +26,7 @@
 </ion-header>
 
 
-<ion-content  padding>
+<ion-content padding>
   <agm-map *ngIf="!ifSelect()" [zoom]="zoomValue" [latitude]="lat" [longitude]="lng">
     <agm-marker *ngFor="let field of listaField; let i=index" [latitude]="field?.location.lat" [longitude]="field?.location.lng"
       [label]="field.fieldName"></agm-marker>
@@ -51,19 +51,21 @@
       </ion-col>
     </ion-row>
 
-      <div  text-center>
-        <button *ngIf="zoomValue>10"  small outline ion-button round   color="danger" (click)="outField()">
-          Alejar Zoom
-        </button>
-      </div>
+    <div text-center>
+      <button *ngIf="zoomValue>10" small outline ion-button round color="danger" (click)="outField()">
+        Alejar Zoom
+      </button>
+    </div>
   </ion-grid>
 
 
-  <ion-list *ngIf="bandSeeMap">
-    <ion-list-header *ngIf="true" text-center>
-      Lista de Canchas
-    </ion-list-header>
-    <ion-item *ngFor="let field of listaField; let i=index">
+  <div *ngIf="bandSeeMap">
+    <div padding text-center>
+      <ion-badge>
+        Lista de Canchas
+      </ion-badge>
+    </div>
+    <ion-card margin-top *ngFor="let field of listaField; let i=index">
       <ion-grid>
         <ion-row (click)="goToDetail(field)">
           <ion-col col-auto>
@@ -76,102 +78,7 @@
           </ion-col>
         </ion-row>
       </ion-grid>
-    </ion-item>
-  </ion-list>
+    </ion-card>
+  </div>
 
-</ion-content>
-<ion-content *ngIf="false" padding>
-  <ion-card>
-
-    <img src="assets/imgs/cancha1.jpg">
-    <ion-fab right top>
-      <button ion-fab>
-        <ion-icon name="pin"></ion-icon>
-      </button>
-    </ion-fab>
-
-    <ion-item>
-      <ion-icon name="football" item-start large></ion-icon>
-      <h2>Cancha N°1</h2>
-      <p>calle 1, avenida 1, Cod 1</p>
-    </ion-item>
-
-    <!-- <ion-item>
-      <ion-icon name="wine" item-start large ></ion-icon>
-      <h2>Institute of Fine Cocktails</h2>
-      <p>14 S. Hop Avenue, Madison, WI 53703</p>
-    </ion-item> -->
-
-    <ion-item>
-      <!-- <span item-start>18 min</span>
-      <span item-start>(2.6 mi)</span> -->
-      <button ion-button icon-start clear item-center (click)="goToCalendar(1)">
-        <ion-icon name="navigate"></ion-icon>
-        Reservar Partido
-      </button>
-    </ion-item>
-
-  </ion-card>
-  <ion-card>
-
-    <img src="assets/imgs/cancha2.jpg">
-    <ion-fab right top>
-      <button ion-fab>
-        <ion-icon name="pin"></ion-icon>
-      </button>
-    </ion-fab>
-
-    <ion-item>
-      <ion-icon name="football" item-start large></ion-icon>
-      <h2>Cancha N°2</h2>
-      <p>calle 2, avenida 1, Cod2</p>
-    </ion-item>
-
-    <!-- <ion-item>
-      <ion-icon name="wine" item-start large ></ion-icon>
-      <h2>Institute of Fine Cocktails</h2>
-      <p>14 S. Hop Avenue, Madison, WI 53703</p>
-    </ion-item> -->
-
-    <ion-item>
-      <!-- <span item-start>18 min</span>
-      <span item-start>(2.6 mi)</span> -->
-      <button ion-button icon-start clear item-center (click)="goToCalendar(2)">
-        <ion-icon name="navigate"></ion-icon>
-        Reservar Partido
-      </button>
-    </ion-item>
-
-  </ion-card>
-  <ion-card>
-
-    <img src="assets/imgs/cancha3.jpg">
-    <ion-fab right top>
-      <button ion-fab>
-        <ion-icon name="pin"></ion-icon>
-      </button>
-    </ion-fab>
-
-    <ion-item>
-      <ion-icon name="football" item-start large></ion-icon>
-      <h2>Cancha N°3</h2>
-      <p>calle 3, avenida 3, Cod 3</p>
-    </ion-item>
-
-    <!-- <ion-item>
-      <ion-icon name="wine" item-start large ></ion-icon>
-      <h2>Institute of Fine Cocktails</h2>
-      <p>14 S. Hop Avenue, Madison, WI 53703</p>
-    </ion-item> -->
-
-    <ion-item>
-      <!-- <span item-start>18 min</span>
-      <span item-start>(2.6 mi)</span> -->
-      <button ion-button icon-start clear item-center (click)="goToCalendar(3)">
-        <ion-icon name="navigate"></ion-icon>
-        Reservar Partido
-      </button>
-    </ion-item>
-
-  </ion-card>
 </ion-content>
