--- a/src/pages/teams/teams.html
+++ b/src/pages/teams/teams.html
@@ -1,76 +1,72 @@
 <ion-header *ngIf="!ifSelect()">
 
-    <ion-navbar color="primary">
-      <button ion-button menuToggle>
-        <ion-icon name="menu"></ion-icon>
+  <ion-navbar color="primary">
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Equipos</ion-title>
+    <ion-buttons end>
+      <button ion-button clear class="search" color="light" icon-only (click)="onSearch()">
+        <ion-icon name="search"></ion-icon>
       </button>
-      <ion-title>Equipos</ion-title>
-      <ion-buttons end>
-        <button 
-              ion-button 
-              clear
-              class="search" 
-              color="light" 
-              icon-only 
-              (click)="onSearch()">
-          <ion-icon name="search"></ion-icon>
-        </button>
-        <page-notificationOn ></page-notificationOn>
-      </ion-buttons>
-    </ion-navbar>
-  
-  </ion-header>
-  <ion-header *ngIf="ifSelect()">
-    <ion-navbar color="darkColor">
-      <ion-searchbar 
-      class="searchbarcus" 
-      [animated]="true" 
-      [(ngModel)]="searchTerm" 
-      [showCancelButton]="true"
-      (ionCancel)="onCancel($event)"
-      (ionInput)="searchTeams()"></ion-searchbar>
-    </ion-navbar>
-  </ion-header>
+      <page-notificationOn></page-notificationOn>
+    </ion-buttons>
+  </ion-navbar>
+
+</ion-header>
+<ion-header *ngIf="ifSelect()">
+  <ion-navbar color="darkColor">
+    <ion-searchbar class="searchbarcus" [animated]="true" [(ngModel)]="searchTerm" [showCancelButton]="true"
+      (ionCancel)="onCancel($event)" (ionInput)="searchTeams()"></ion-searchbar>
+  </ion-navbar>
+</ion-header>
 
 
 <ion-content padding>
 
-    <ion-list>
-        <ion-list-header *ngIf="true" text-center>
-          Lista de Equipos
-        </ion-list-header>
-        <ion-item *ngFor="let team of listaTeam; let i=index">
-          <ion-grid >
-              <ion-row (click)="goToDetail(team)">
-                  <ion-col col-auto>
-                    <div>
-                      <h2 class="product-name"> {{team.name}} </h2>
-                      <h3 class="product-name">
-                        <ion-note>Capacidad: </ion-note> {{team.sizeTeam}}
-                      </h3>
-                    </div>
-                  </ion-col>
-                  <ion-col col-auto class="disp">
-                    <div *ngIf="available(team)==team.sizeTeam">
-                      <h3 class="product-name">Disponibilidad </h3>
-                      <h3 class="product-name" >
-                        <ion-note color="danger"><ion-icon class="people" name="people"></ion-icon>  {{available(team)}} / {{team.sizeTeam}}</ion-note> 
-                      </h3>
-                    </div>
-                    <div *ngIf="available(team)!=team.sizeTeam">
-                        <h3 class="product-name">Disponibilidad </h3>
-                        <h3 class="product-name" >
-                          <ion-note color="primary"><ion-icon class="people" name="people"></ion-icon>  {{available(team)}} / {{team.sizeTeam}}</ion-note> 
-                        </h3>
-                      </div>
-                  </ion-col>
-                </ion-row>
-                <div *ngIf="sizeMatch(team.nextMatch)" class="Disponible" text-center >
-                  <button end ion-button round small outline color="secondary" (click)="seeMatchs(team.nextMatch,i)">Proximo Partido {{seeDay(team.nextMatch)}}</button>
-                </div>
-          </ion-grid>
-        </ion-item>
-      </ion-list>
+  <div padding text-center>
+    <ion-badge>
+      Lista de Equipos
+    </ion-badge>
+  </div>
+
+  <ion-card padding-top margin-top *ngFor="let team of listaTeam; let i=index">
+    <ion-grid>
+      <ion-row (click)="goToDetail(team)">
+        <ion-col col-auto>
+          <div>
+            <h2 class="product-name"> {{team.name}} </h2>
+            <h3 class="product-name">
+              <ion-note>Capacidad: </ion-note> {{team.sizeTeam}}
+            </h3>
+          </div>
+        </ion-col>
+        <ion-col col-auto class="disp">
+          <div *ngIf="available(team)==team.sizeTeam">
+            <h3 class="product-name">Disponibilidad </h3>
+            <h3 class="product-name">
+              <ion-note color="danger">
+                <ion-icon class="people" name="people"></ion-icon> {{available(team)}} / {{team.sizeTeam}}
+              </ion-note>
+            </h3>
+          </div>
+          <div *ngIf="available(team)!=team.sizeTeam">
+            <h3 class="product-name">Disponibilidad </h3>
+            <h3 class="product-name">
+              <ion-note color="primary">
+                <ion-icon class="people" name="people"></ion-icon> {{available(team)}} / {{team.sizeTeam}}
+              </ion-note>
+            </h3>
+          </div>
+        </ion-col>
+      </ion-row>
+      <div *ngIf="sizeMatch(team.nextMatch)" class="Disponible" text-center>
+        <button end ion-button round small outline color="secondary" (click)="seeMatchs(team.nextMatch,i)">Proximo
+          Partido {{seeDay(team.nextMatch)}}</button>
+      </div>
+    </ion-grid>
+
+  </ion-card>
 
   <ion-fab class="addButtonfab" right bottom>
     <button ion-fab mini class="addButton" round icon-only (click)="createTeam()">
